--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-subheading">Welcome To Our Studio!</div>
-            <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+            <div class="masthead-subheading text-light">Welcome To Choi Studio!</div>
+            <div class="masthead-heading text-uppercase text-light">It's Nice To Meet You</div>
             <a class="btn btn-primary btn-xl text-uppercase" href="#choiwheatley">Tell Me More</a>
         </div>
     </header>
